syntax = "proto3";

package users;

option go_package = "github.com/justcgh9/discord-clone-proto/api/proto/users;users";

service UserService {  
  rpc Ping (PingRequest) returns (PongResponse);

  rpc Register (RegisterRequest) returns (RegisterResponse);
  
  rpc Login (LoginRequest) returns (LoginResponse);
  
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
}

message PingRequest {

}

message PongResponse {

}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  int64 app_id = 3;
}

message LoginResponse {
  string access_token = 1;
  User  user = 2;
}

message GetProfileRequest {
  string access_token = 1;
}

message GetProfileResponse {
  int64 user_id = 1;
  string email = 2;
  string username = 3;
}

message User {
  int64 user_id = 1;
  string email = 2;
  string password = 3;
  string handle = 4;
}